--- a/news21national/templates/n21alpha/api/v2/bio_json.html
+++ b/news21national/templates/n21alpha/api/v2/bio_json.html
@@ -1,3 +1,3 @@
 {% if callback %}{{callback}}({% endif %}{"bio":
-    { "id":"{{ bio.id }}", "name":"{{ bio.first_name }} {{ bio.last_name }}", "bio":"{{ bio.bio }}", "twitter":"{% if profile.twitter_public %}{{ bio.bio }}{% endif %}", "linkedin":"{% if profile.linkedin_public %}{{ bio.linkedinid }}{% endif %}", "facebook":"{% if profile.facebook_public %}{{ bio.facebookid }}{% endif %}" }
+    { "id":"{{ bio.id }}", "name":"{{ bio.first_name|escapejs }} {{ bio.last_name|escapejs }}","bio":"{{bio.bio|linebreaksbr|escapejs}}", "twitter":"{% if bio.twitter_public %}{{ bio.twitterid|escapejs }}{% endif %}", "linkedin":"{% if bio.linkedin_public %}{{ bio.linkedinid }}{% endif %}", "facebook":"{% if bio.facebook_public %}{{ bio.facebookid }}{% endif %}" }
 }{% if callback %}){% endif %}
